vmsvc/jpmc/star/demo-np/np-allow-mgmt-dev.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99990-9002-a05-t3-dev 
  name: 99990-9002-a05-t3-dev.allow-mgmt 
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a05-t3-dev
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99993-1003-a05-t4-dev
  name: 99993-1003-a05-t4-dev.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a05-t3-dev
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-1001-a05-t2-dev
  name: 99994-1001-a05-t2-dev.allow-mgmt
  labels:
    user: S000000
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a05-t3-dev
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-1002-a05-t3-dev
  name: 99994-1002-a05-t3-dev.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a05-t3-dev
