vmsvc/jpmc/star/demo-np/np-allow-mgmt-prod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99991-9001-a03-t1-prod
  name: 99991-9001-a03-t1-prod.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a01-t3-prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99993-1003-a03-t4-prod
  name: 99993-1003-a03-t4-prod.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a01-t3-prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-1001-a03-t2-prod
  name: 99994-1001-a03-t2-prod.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a01-t3-prod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-1002-a03-t3-prod
  name: 99994-1002-a03-t3-prod.allow-mgmt
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
     - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99999-9000-a01-t3-prod
