vmsvc/jpmc/star/demo-np/np-db-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99993-1003-a05-t4-dev
  name: 99993-1003-a05-t4-dev.app-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-1002-a05-t3-dev
    ports:
    - protocol: TCP
      port: 1521
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
