vmsvc/jpmc/star/demo-np/np-default-deny-cs-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99994-1001-a05-t2-dev
  name: 99994-1001-a05-t2-dev.default-deny
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99994-1002-a05-t3-dev
  name: 99994-1002-a05-t3-dev.default-deny
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    ports:
    - port: 53
      protocol: UDP
