vmsvc/jpmc/star/demo-np/np-psaas-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99991-9001-a05-t1-dev
  name: 99991-9001-a05-t1-dev.psaas-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99990-9002-a05-t3-dev
    ports:
    - protocol: TCP
      port: 443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-1001-a05-t2-dev
    ports:
    - protocol: TCP
      port: 443
  - to:
    ports:
    - port: 53
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99991-9001-a03-t1-prod
  name: 99991-9001-a03-t1-prod.psaas-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99990-9002-a01-t3-prod
    ports:
    - protocol: TCP
      port: 443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-1001-a03-t2-prod
    ports:
    - protocol: TCP
      port: 443
  - to:
    ports:
    - port: 53
      protocol: UDP
