vmsvc/jpmc/star/demo-np/np-web-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99994-1001-a05-t2-dev
  name: 99994-1001-a05-t2-dev.web-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99991-9001-a05-t1-dev
    ports:
    - protocol: TCP
      port: 443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-1002-a05-t3-dev
    ports:
    - protocol: TCP
      port: 9443
  - to:
    ports:
    - port: 53
      protocol: UDP
