vmsvc/jpmc/star/demo-np/np-web-policy-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: 99994-1001-a03-t2-prod
  name: 99994-1001-a03-t2-prod.web-policy
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: 99991-9001-a03-t1-prod
    ports:
    - protocol: TCP
      port: 443
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          namespace: 99994-1002-a03-t3-prod
    ports:
    - protocol: TCP
      port: 9443
  - to:
    ports:
    - port: 53
      protocol: UDP
